syntax = "proto3";

import "../../../base/file-and-subdirectory.base.proto";

message UpdateInput {
    string assetId = 1;
    repeated FileAndSubdirectory fileAndSubdirectories = 2;
}